--- a/23_Day_Event_listeners/23_day_starters/project_1/index.html
+++ b/23_Day_Event_listeners/23_day_starters/project_1/index.html
@@ -3,12 +3,18 @@
 
 <head>
 	<title>30DaysOfJavaScript:23 Day: Number Generator </title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<h1>Number Generator</h1>
 	<h2>30DaysOfJavaScript:DOM Day 2</h2>
 	<h3>Author: Asabeneh Yetayeh</h3>
+	<input placeholder="Generate more numbers..." type="text" id="amount">
+	<button id="amountButton">Generate</button>
 	<div class="wrapper">
 
 	</div>
