--- a/23_Day_Event_listeners/23_day_starters/project_2/index.html
+++ b/23_Day_Event_listeners/23_day_starters/project_2/index.html
@@ -3,12 +3,20 @@
 
 <head>
 	<title>30DaysOfJavaScript:23 Day: Keyboard Key </title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+	<div class="container">
+		<div id="wrapper"></div>
+		<div class="box"></div>
+	</div>
 
-	<script src="./scripts/main.js"></script>
+	<script src="scripts/main.js"></script>
 
 </body>
 
