--- a/23_Day_Event_listeners/23_day_starters/project_1/index.html
+++ b/23_Day_Event_listeners/23_day_starters/project_1/index.html
@@ -13,7 +13,7 @@
 	<h1>Number Generator</h1>
 	<h2>30DaysOfJavaScript:DOM Day 2</h2>
 	<h3>Author: Asabeneh Yetayeh</h3>
-	<input placeholder="Generate more numbers..." type="text" id="amount">
+	<input id="amount" placeholder="Generate more numbers..." type="text">
 	<button id="amountButton">Generate</button>
 	<div class="wrapper">
 
